--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,31 @@
-body{
+/* body{
     display: block;
+} */
+.imgers{
+    top: 15%;
+width: 100%;
+position: absolute;
+height: 500px;
+}
+.contaienrpp{
+position: absolute;
+top: 35%;
+left: 20%;
+color:aliceblue;
+}
+.containercol{
+    position: absolute;
+    top: 80%;
+    left: 25%;
+    width: 400px;
+    height: 800px;
+}
+.h1-col{
+    font-size: 50px;
+    padding-bottom: 50px;
+}
+.p-col{
+font-size: 20px;
+
+
 }
