--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,17 @@
+:root {
+    --color-primary: #5ec576;
+    --color-secondary: #ffcb03;
+    --color-tertiary: #ff585f;
+    --color-primary-darker: #4bbb7d;
+    --color-secondary-darker: #ffbb00;
+    --color-tertiary-darker: #fd424b;
+    --color-primary-opacity: #5ec5763a;
+    --color-secondary-opacity: #ffcd0331;
+    --color-tertiary-opacity: #ff58602d;
+    --gradient-primary: linear-gradient(to top left, #69afda, #9be15d);
+    --gradient-secondary: linear-gradient(to top left, #ffb003, #ffcb03);
+  }
+
 /* body{
     display: block;
 } */
@@ -29,3 +43,43 @@ font-size: 20px;
 
 
 }
+
+  .highlight {
+    position: relative;
+  }
+  
+  .highlight::after {
+    display: block;
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    opacity: 0.7;
+    transform: scale(1.07, 1.05) skewX(-15deg);
+    background-image: var(--gradient-primary);
+  }
+  .contaiener-maimulte{
+    position:absolute;
+    top: 80%;
+    left: 60%;
+    width: 300px;
+    padding: 20px;
+    background-color: #2c4067;
+    color: white;
+    border-radius: 5px;
+    /* padding-bottom: 150px; */
+  }
+  .more{
+    padding-bottom: 30px;
+  }
+  .arrow{
+    margin-bottom: 40px;
+    margin-top: 40px;
+    margin-left: 40px;
+border-radius: 5px;
+    width: 50px;
+    height: 40px;
+  }
